--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   
 <div>
   <p></p>
-  <button>+</button>
-  <button>-</button>
+  <button id="button1">+</button>
+  <button id="button2">-</button>
 </div>
 
 
