modifiche al progetto

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/CSS/index.css">
   <title>Counter</title>
 </head>
 <body>
   
-<div>
-  <p></p>
-  <button id="button1">+</button>
-  <button id="button2">-</button>
+<div class="contenitore-contatore">
+  <h1 id="counter">0</h1>
+  <div class="bottoni">
+    <button id="bottone1">+</button>
+    <button id="bottone2">-</button>
+  </div>
 </div>
 
 
